--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "express": "^4.17.1",
+    "helmet": "^3.21.3",
     "mongoose": "^5.8.4",
     "nodemon": "^2.0.2"
   },
